--- a/src/components/addressManagementBox/css/style.css
+++ b/src/components/addressManagementBox/css/style.css
@@ -4,9 +4,12 @@
   height: 30rem;
   overflow: auto;
   padding: 1rem 2rem;
+  position: relative;
   width: min(100%, 50rem);
 }
 
 .address-box-close-btn {
   margin-left: auto;
+  position: absolute;
+  right: 2rem;
 }
